bugfix (#16)
* fix: only return valid way geometries

* fix: minor node deleted/recreated cycle