@@ -17,15 +17,33 @@ class MinorTest {
     @Test
     void testMinorNode() throws IOException {
         var builder = MinorNode.newBuilder();
+        builder.add(new OSMEntity.OSMNode(123, 0, ofEpochSecond(0), 0, 1 , "test", false, Map.of(), 0.0, 0.0));
         builder.add(new OSMEntity.OSMNode(123, 1, ofEpochSecond(1), 1, 1 , "test", true, Map.of(), 0.0, 0.0));
+        builder.add(new OSMEntity.OSMNode(123, 2, ofEpochSecond(2), 2, 1 , "test", true, Map.of(), 1.0, 1.0));
+        builder.add(new OSMEntity.OSMNode(123, 3, ofEpochSecond(3), 3, 1 , "test", true, Map.of("node","test"), 1.0, 1.0));
+        builder.add(new OSMEntity.OSMNode(123, 4, ofEpochSecond(4), 4, 1 , "test", true, Map.of(), 2.0, 2.0));
+        builder.add(new OSMEntity.OSMNode(123, 5, ofEpochSecond(5), 5, 1 , "test", false, Map.of(), 2.0, 2.0));
+        builder.add(new OSMEntity.OSMNode(123, 6, ofEpochSecond(6), 6, 6 , "6", true, Map.of(), 2.0, 2.0));
 
         try (var output = new Output(4 << 10)) {
             builder.serialize(output);
             var bytes = output.array();
             var osh = MinorNode.deserialize(123L, bytes);
 
-            assertEquals(1, osh.size());
-            assertEquals("test", osh.getFirst().user());
+            assertEquals(5, osh.size());
+
+            assertEquals("test", osh.get(0).user());
+            assertEquals(0.0, osh.get(0).lon());
+            assertEquals(1.0, osh.get(1).lon());
+            assertEquals(2.0, osh.get(2).lon());
+
+            assertEquals(2.0, osh.get(3).lon());
+            assertFalse(osh.get(3).visible());
+
+            assertEquals(2.0, osh.get(4).lon());
+            assertTrue(osh.get(4).visible());
+            assertEquals(6, osh.get(4).userId());
+            assertEquals("6", osh.get(4).user());
         }
     }
 
